0.6.2.3
Added parameter locale to New-NavContainer to override the culture setting of the container
BugFix: Export-NavContainerObjects in hyperv ltsc2019 containers caused destructive encoding of the object files

0.6.2.2
Extract-FilesFromStoppedNavContainer (and -useBestContainerOS) didn't support 15.x containers

0.6.2.1
Renamed parameters navDvd* on New-BcContainer to dvd* (and created alias' for backwards compatibility)
Bugfix #502 Windows Client tries to connect to localhost
Bugfix #503 Credential parameter missing on Publish-NavContainerApp
Support for additional docker registry for private deployments
Added parameter interactionTimeout to Run-TestsInNavContainer and set the default to 2 hours (earlier hardcoded to 10 minutes)
Added parameter AppendToXUnitResultFile to Run-TestsInNavContainer to allow additional tests runs added to same Xunit output file
Added parameter ReRun to Run-TestsInNavContainer to replace former entry in XUnitResultFile with new run
Added parameter ReturnTrueIfAllPassed to make Run-TestsInNavContainer return $true if all tests passed
Use filtering to increase performance of running a single test codeunit through Run-TestsInNavContainer (instead of running all)

0.6.2.0
Support for 15.x Containers
Select the best generic image when running a DVD (earlier versions chose between ltsc2016 and ltsc2019)
Added tests for AppHandling functions
Added an alias for NavUserPassword to New-NavContainer called UserPassword.
Added alFileStructure parameter to Convert-ModifiedObjectsToAl and Create-AlProjectFolderFromNavContainer
Added function Copy-AlSourceFiles to copy AL source files to a file structure given by the alFileStructure parameter

0.6.1.5
Use (Get-CimInstance Win32_OperatingSystem).Version instead of [System.Environment]::OSVersion to identify OS Version in Get-BestNavContainerImageName
Do not use docker cp for Copy-FileToNavContainer and Copy-FileFromNavContainer
Published from Azure DevOps

0.6.1.4